apps/jellyfin-m3ueditor/m3u-editor-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: m3u-editor
  namespace: media
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
  - "m3u-editor.coruscant.yarnold.co.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: m3u-editor
      port: 36400
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: m3u-editor-ws
  namespace: media
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "m3u-editor.coruscant.yarnold.co.uk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /app
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: Connection
                value: Upgrade
              - name: Upgrade
                value: websocket
      backendRefs:
        - name: m3u-editor-ws
          port: 36800
